# scheduling-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHAOS.md  PRD.md  SCHEMA_AUDIT.md  TASKS.md
scripts/: ci.sh  install-hooks.sh
src/scheduling_agent/: __init__.py  __main__.py  calendar.py  checkpoint.py  cli.py  graph.py  models.py  observability.py  providers.py  render.py  rrule.py  settings.py  structured.py  web.py
src/scheduling_agent/evals/: __init__.py  __main__.py  cases.yaml  dataset.py  models.py  runner.py  scorers.py
tests/: conftest.py  test_calendar.py  test_chaos.py  test_checkpoint.py  test_cli.py  test_eval_dataset.py  test_eval_runner.py  test_eval_scorers.py  test_graph.py  test_models.py  test_observability.py  test_providers.py  test_render.py  test_rrule.py  test_settings.py  test_structured.py  test_web.py
