[project]
name = "scheduling-agent"
version = "0.0.1"
description = "LangGraph scheduling agent: natural language to RFC 5545 calendar events on WebCalendar via MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Craig Knudsen" }]
dependencies = [
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/craigk5n/scheduling-agent"
Repository = "https://github.com/craigk5n/scheduling-agent"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit>=1.7",
    "types-python-dateutil>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduling_agent"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=scheduling_agent --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["scheduling_agent"]
branch = true
